[project]
name = "bosonic-qiskit"
dynamic = ["version"]
authors = [
    { name = "Tim Stavenger", email = "timothy.stavenger@pnnl.gov" }
]
description = "National Quantum Initiative Co-design Center for Quantum Advantage bosonic Qiskit simulator"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "qiskit==1.2.4",
    "qiskit_aer==0.15.1",
    "qiskit-ibm-runtime==0.31.0",
    "qutip==5.0.4",
    "matplotlib==3.9.2",
    "pylatexenc==2.10",
    "numpy<2.0.0"
]

[project.urls]
Homepage = "https://github.com/C2QA/bosonic-qiskit"
Issues = "https://github.com/C2QA/bosonic-qiskit/issues"

[build-system]
requires = ["setuptools >= 61.0", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["c2qa"]

[tool.setuptools-git-versioning]
enabled = true
