[project]
name = "bosonic-qiskit"
dynamic = ["version"]
authors = [{ name = "Tim Stavenger", email = "timothy.stavenger@pnnl.gov" }]
description = "National Quantum Initiative Co-design Center for Quantum Advantage bosonic Qiskit simulator"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "qiskit==1.3.2",
    "qiskit-aer==0.16.0",
    "qiskit-ibm-runtime==0.34.0",
    "qutip>=5.0.4,<=5.1.1",
    "matplotlib>=3.9.4,<=3.10.0",
    "pylatexenc==2.10",
    "numpy>=2.0.2,<=2.2.2",
]

[project.urls]
Homepage = "https://github.com/C2QA/bosonic-qiskit"
Issues = "https://github.com/C2QA/bosonic-qiskit/issues"

[build-system]
requires = ["setuptools == 75.8.0", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["c2qa"]

[tool.setuptools-git-versioning]
enabled = true
